welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:8: error: type mismatch;
 found   : Unit
 required: Int
		for(j<-0 to nums.length.toInt)
                     ^